// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/threading/common/follow_button should say follow 1`] = `
<Memo(FollowButton)
  isFollowing={false}
  onClick={[MockFunction]}
>
  <ThreadButton
    className="FollowButton"
    disabled={false}
    isActive={false}
    onClick={[MockFunction]}
  >
    <button
      className="ThreadButton ThreadButton___transparent FollowButton"
      disabled={false}
      onClick={[MockFunction]}
    >
      <span
        className="ThreadButton_label"
      >
        Follow
      </span>
    </button>
  </ThreadButton>
</Memo(FollowButton)>
`;

exports[`components/threading/common/follow_button should say following 1`] = `
<Memo(FollowButton)
  isFollowing={true}
>
  <ThreadButton
    className="FollowButton"
    disabled={false}
    isActive={true}
  >
    <button
      className="ThreadButton ThreadButton___transparent is-active FollowButton"
      disabled={false}
    >
      <span
        className="ThreadButton_label"
      >
        Following
      </span>
    </button>
  </ThreadButton>
</Memo(FollowButton)>
`;
